--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.11"
+    "mongoose": "^6.0.11",
+    "nodemon": "^2.0.15"
   }
 }
